Close whitespace and fix display to prevent line break

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -372,9 +372,6 @@
 }
 
  /* Style footnotes using custom q-note shortcode */
- .quire-citation {
-   display: inline-block;
- }
  @media print {
    .content sup.quire-citation {
      top: 1.5pt;
